# darklight-gem-work

./: README.md  link-to-cooker-repo
cluster_timing/: 2490V.root  3730V.root  CMakeLists.txt  gem.C  main.ipynb  timing_res.ipynb
clustering/: multitrack.ipynb
heed_test/: CMakeLists.txt  field.txt  field3.txt  gem_hole.C  main.C  makefile  quick.C
heed_test/analysis/: angle_analysis.ipynb  data.root  fit_gain.ipynb  hole_analysis.py  interevent.ipynb  ionization_counts.ipynb  multilayer.ipynb  plot_paths.C  test.C  test_distributions.ipynb  wiregrid.ipynb  xy_dist.C
heed_test/analysis/data/: 10000eventsSpreaded.npz  40degthetaother.root  disable.root  electron_gen.root  enable.root  g4DL_output.root  hole.root  hole_2mm.root  hole_characterization.root  other.root  paperdata.txt  random.root  reconstruction.ipynb  theta=30_2000event.root  theta=30_2000events2.root
heed_test/analysis/data/angles/: 0deg0.root  0deg1.root  0deg10.root  0deg2.root  0deg3.root  0deg4.root  0deg5.root  0deg6.root  0deg7.root  0deg8.root  0deg9.root  10deg1.root  10deg10.root  10deg2.root  10deg3.root  10deg4.root  10deg5.root  10deg6.root  10deg7.root  10deg8.root  10deg9.root  20deg1.root  20deg2.root  20deg3.root  20deg5.root  20deg6.root  20deg7.root  20deg8.root  20deg9.root  30deg0.root  30deg1.root  30deg10.root  30deg2.root  30deg3.root  30deg4.root  30deg5.root  30deg6.root  30deg7.root  30deg8.root  30deg9.root  (+23 more)
heed_test/comsol/: H:\NUMEN\gas tracker\fieldmapGarfield2_1_light.txt  Untitled.xml  field.txt
